Add font-family: Roboto

--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta charset="UTF-8">
     <title>Introduction to CSS</title>
     <link rel="stylesheet" href="./style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
+
 </head>
 
 <body>
@@ -29,7 +35,7 @@
         <section class="blog">
 
             <h2 class="section-title">ბოლო სიახლეები</h2>
-          
+
             <div class="container cards">
                 <div class="card-group">
                     <div class="card-img purple"></div>
