--- a/index.html
+++ b/index.html
@@ -16,13 +16,16 @@
 <body>
 
     <header>
-        <a class="logo" href="#techblog">TechBlog</a>
-        <nav class="menu">
-            <a href="#home">მთავარი</a>
-            <a href="#bloge">ბლოგი</a>
-            <a href="#category">კატეგორიები</a>
-            <a href="#about">ჩვენს შესახებ</a>
-            <a href="#contacts">კონტატი</a>
+        <a href="#techblog">TechBlog</a>
+        <nav>
+            <ul>
+                <li><a href="#home">მთავარი</a></li>
+                <li><a href="#bloge">ბლოგი</a></li>
+                <li><a href="#category">კატეგორიები</a></li>
+                <li><a href="#about">ჩვენს შესახებ</a></li>
+                <li><a href="#contacts">კონტატი</a></li>
+
+            </ul>
         </nav>
 
     </header>
@@ -33,8 +36,7 @@
         </section>
 
         <section class="blog">
-
-            <h2 class="section-title">ბოლო სიახლეები</h2>
+            <h2>ბოლო სიახლეები</h2>
 
             <div class="container cards">
                 <div class="card-group">
@@ -124,25 +126,27 @@
         </section>
     </main>
 
-    <footer class="info">
-        <div class="info-container">
-            <div class="info-col">
+    <footer>
+        <div class="info">
+            <div>
                 <h3 id="techblog">TechBlog</h3>
                 <p>თანამედროვე ტექნოლოგიების შესახებ <br>
                     საინფორმაციო პლატფორმა. <br>
                     ჩვენ გთავაზობთ უახლეს
                     სიახლეებს IT სფეროდან.
                 </p>
-                <div>
+                
                     <h4 id="contacts">კონტაქტი</h4>
-                    <p>Email: info@techblog.ge</p>
-                    <p>Tel: +995 555 123 456</p>
-                    <p>Address: Tbilisi, Georgia</p>
-                </div>
+                    <ul>
+                        <li>Email: info@techblog.ge</li>
+                        <li>Tel: +995 555 123 456</li>
+                        <li>Address: Tbilisi, Georgia</li>
+
+                    </ul>
             </div>
-            <div class="info-col">
+            <div>
                 <h4 id="category">კატეგორიები</h4>
-                <ul class="info-list">
+                <ul>
                     <li>პროგრამირება</li>
                     <li>დიზაინი</li>
                     <li>უსაფრთხოება</li>
